--- a/wrangler.toml
+++ b/wrangler.toml
@@ -4,8 +4,8 @@ compatibility_date = "2026-01-15"
 
 [[d1_databases]]
 binding = "DB"
-database_name = "gpsc_v2_db"
+database_id = "308c09e8-daa2-40ed-a68b-6a8ae3e158aa"
 
-[[kv_namespaces]]
-binding = "KV"
-id = "GPSC_V21_DB"
+kv_namespaces = [
+  { binding = "KV", id = "87a246dc84004e09b6b8f0fe62c4fcef" }
+]
